styles.css
@import url('https://fonts.googleapis.com/css?family=Nunito+Sans&display=swap');
@import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');

/*----------- Elements ------------*/
* {
  margin: 0;
  padding: 0;
  text-decoration: none;
}

html, body {
  font-family: 'Quicksand', sans-serif;
  height: 100vh;
  overflow-x: hidden;
  overflow-y: auto;
}

a {
  display: flex;
  flex-wrap: wrap;
  align-content: center;
  justify-content: center;
  width: 6vw;
  height: 2.25vw;
  outline: none;
  cursor: pointer;
  background: none;
  transition: .5s;
  font-size: 0.8vw;
  border-radius: 0.3vw;
}
    .purple {
      background-color: #747fe0;
      border: 0.07vw solid #747fe0;
      box-shadow: 0 0.5vh 1vh 0 rgba(0,0,0,0.2);
      color: white;
      margin: 2.5% 25% 0 10%;
    }
    .purple:hover {
      background-color: #838ef8;
      border: 0.07vw solid #838ef8;
      margin: 2% 25% 0.5% 10%;
      transition: all 0.3s ease-in-out;
      box-shadow: 0 0.8vh 1.2vh 0 rgba(0,0,0,0.2);
    }

span {
  border-radius: 0.6vh;
  border: 0.2vh solid #92eac0;
  padding: 0.7vh;
  margin: 1vh 0.6vw 1vh 0;
  font-family: 'Quicksand', sans-serif;
  font-size: 0.8vw;
  color: #525f7f;
  line-height: 5vh;
}
/*----------- Custom Classes ------------*/
.about {
  height: 100%;
  width: 40%;
  position: fixed;
  display: flex;
  flex-wrap: wrap;
  align-content: center;
  justify-content: left;
  line-height: 1.5vw;
}

.card {
  position: relative;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-content: left;
  width: 80%;
  height: 42%;
  margin: 5% 10% 0 10%;
  font-family: 'Quicksand', sans-serif;
  box-shadow: 0 0.5vh 1vh 0 rgba(0,0,0,0.2);
  overflow: hidden;
}

.card-contents {
  background-size: cover;
  position: absolute;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  align-content: left;
  width: 80%;
  height: 100%;
  line-height: 2.5vh;
}

.card-image {
  width: 80%;
  height: 100%;
  position: absolute!important;
  top: 0;
  left: 0;
}

.card-background {
  position: absolute;
  top: -1px;
  right: -1px;
  height: 110%;
  width: 83%;
  background: url(images/card-background-white.svg);
  background-size: cover;
}

.container {
  float: right;
  width: 60%;
  height: 100%;
}

.content {
  height: 60%;
  width: 100%;
}

.header {
  height: 10%;
  width: 100%;
}

.footer {
  height: 30%;
  width: 100%;
}

.skills {
  border: black;
}

